# slam_toolbox

./: .gitignore  .travis.yml  CHANGELOG.rst  CMakeLists.txt  Dockerfile  README.md  package.xml  paper.bib  paper.md  rviz_plugin.xml  rviz_plugins.xml  solver_plugins.xml  stack.xml
.snapcraft/: travis_snapcraft.cfg
CMake/: FindBLAS.cmake  FindCHOLMOD.cmake  FindCSparse.cmake  FindQt5.cmake  FindSuiteSparse.cmake  FindTBB.cmake
config/: costmap_common_params.yaml  explore_costmap_params.yaml  global_costmap_params.yaml  mapper_params.yaml  mapper_params_lifelong.yaml  mapper_params_localization.yaml  mapper_params_offline.yaml  mapper_params_online.yaml  mapper_params_online_async.yaml  mapper_params_online_multi_async.yaml  mapper_params_online_sync.yaml  move_base.xml  slam_toolbox_default.rviz
doc/: paper.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
karto/: CMakeLists.txt  Makefile  Makefile.karto  karto.patch  karto_slam.launch  karto_stage.launch  karto_stage_explore.launch  manifest.xml
karto/config/: base_local_planner_params.yaml  local_costmap_params.yaml  recovery_behaviors.yaml
karto/src/: slam_karto.cpp  spa_solver.cpp  spa_solver.h
karto/worlds/: willow-pr2-5cm.world
karto_scan_matcher/: CMakeLists.txt  mainpage.dox  manifest.xml
karto_scan_matcher/include/karto_scan_matcher/: karto_scan_matcher.h
karto_scan_matcher/src/: karto_scan_matcher.cpp  python_exports.cpp  test_scan_matcher.cpp
karto_scan_matcher/src/karto_scan_matcher_python/: __init__.py
karto_scan_matcher/test/: scan_match_test.cpp
launch/: build_map_w_params.launch  build_map_w_params_online.launch  build_map_w_params_online_sync.launch  karto_slam.launch  karto_stage.launch  lifelong.launch  lifelong_launch.py  localization.launch  localization_launch.py  merge_maps_kinematic.launch  merge_maps_kinematic_launch.py  merge_maps_kinetic.launch  merge_maps_optimization.launch  offline.launch  offline_launch.py  online_async.launch  online_async_launch.py  online_async_multirobot_launch.py  online_sync.launch  online_sync_launch.py
lib/KartoSDK-slam_toolbox/samples/: CMakeLists.txt  tutorial1.cpp  tutorial2.cpp
lib/karto_sdk/: Authors  CHANGELOG.rst  CMakeLists.txt  package.xml
lib/karto_sdk/include/karto_sdk/: Karto.h  Macros.h  Mapper.h  Math.h  Types.h  nanoflann.hpp  nanoflann_adaptors.h
lib/karto_sdk/samples/: README.txt  SpaSolver.cpp  SpaSolver.h
lib/karto_sdk/src/: Karto.cpp  Mapper.cpp
log/: latest_build
mapping_plugin/: slam_toolbox_rviz_plugin.cpp  slam_toolbox_rviz_plugin.hpp
maps/: willow-full-0.05.pgm
msg/: LocalizedLaserScan.msg
rviz_plugin/: slam_toolbox_rviz_plugin.cpp  slam_toolbox_rviz_plugin.h  slam_toolbox_rviz_plugin.hpp
slam_toolbox/: CMakeLists.txt  package.xml  rviz_plugins.xml
slam_toolbox/CMake/: FindG2O.cmake  FindGTSAM.cmake
slam_toolbox/config/: mapper_params_lifelong.yaml  mapper_params_localization.yaml  mapper_params_localization_async.yaml  mapper_params_offline.yaml  mapper_params_online_async.yaml  mapper_params_online_sync.yaml  slam_toolbox_default.rviz
slam_toolbox/include/slam_toolbox/: get_pose_helper.hpp  laser_utils.hpp  loop_closure_assistant.hpp  map_saver.hpp  merge_maps_kinematic.hpp  serialization.hpp  slam_mapper.hpp  slam_toolbox_async.hpp  slam_toolbox_common.hpp  slam_toolbox_localization.hpp  slam_toolbox_sync.hpp  toolbox_msgs.hpp  toolbox_types.hpp  visualization_utils.hpp
slam_toolbox/include/slam_toolbox/experimental/: slam_toolbox_lifelong.hpp
slam_toolbox/launch/: __init__.py  localization_async.launch  robot.py  server.py  upload.py
slam_toolbox/lib/karto_sdk/: Authors  CMakeLists.txt  package.xml
slam_toolbox/lib/karto_sdk/cmake/: FindTBB.cmake
slam_toolbox/lib/karto_sdk/include/karto_sdk/: Karto.h  Mapper.h  Types.h  nanoflann.hpp  nanoflann_adaptors.h
slam_toolbox/lib/karto_sdk/include/karto_sdk/contrib/: ChowLiuTreeApprox.h  EigenExtensions.h
slam_toolbox/lib/karto_sdk/src/: Karto.cpp  Mapper.cpp
slam_toolbox/lib/karto_sdk/src/contrib/: ChowLiuTreeApprox.cpp
slam_toolbox/lib/karto_sdk/test/: chow_liu_tree_approx_test.cpp  eigen_extensions_test.cpp
slam_toolbox/rviz_plugin/: slam_toolbox_rviz_plugin.cpp  slam_toolbox_rviz_plugin.h
slam_toolbox/snap/: generate_snap  snapcraft.yaml
slam_toolbox/solvers/: ceres_solver.cpp  ceres_solver.hpp  ceres_utils.h
slam_toolbox/solvers/deprecated/: GTSAM_solver.cpp  g2o_solver.cpp  g2o_solver.hpp  spa_solver.cpp
slam_toolbox/src/: laser_utils.cpp  loop_closure_assistant.cpp  map_saver.cpp  merge_maps_kinematic.cpp  slam_mapper.cpp  slam_toolbox_async.cpp  slam_toolbox_async_node.cpp  slam_toolbox_common.cpp  slam_toolbox_localization.cpp  slam_toolbox_sync.cpp  slam_toolbox_sync_node.cpp
slam_toolbox/src/experimental/: slam_toolbox_lifelong.cpp
slam_toolbox_msgs/: CMakeLists.txt  package.xml
slam_toolbox_msgs/srv/: AddSubmap.srv  Clear.srv  DeserializePoseGraph.srv  MergeMaps.srv  Pause.srv  Reset.srv  SaveMap.srv  SerializePoseGraph.srv
slam_toolbox_msgs/srvs/: DeserializePoseGraph.srv
slam_toolbox_rviz/: CMakeLists.txt  package.xml  rviz_plugins.xml
slam_toolbox_rviz/src/: slam_toolbox_rviz_plugin.cpp  slam_toolbox_rviz_plugin.h
snap/: generate_snap  snapcraft.yaml
solvers/: GTSAM_solver.cpp  GTSAM_solver.hpp  ceres_solver.cpp  ceres_solver.hpp  ceres_utils.h  g2o_solver.cpp  g2o_solver.hpp  spa_solver.cpp  spa_solver.hpp
src/: laser_utils.cpp  loop_closure_assistant.cpp  map_saver.cpp  merge_maps_kinematic.cpp  merge_maps_kinetic.cpp  merge_maps_optimization.cpp  merge_maps_tool.cpp  serialization.cpp  slam_karto.cpp  slam_mapper.cpp  slam_toolbox.cpp  slam_toolbox_async.cpp  slam_toolbox_async_node.cpp  slam_toolbox_common.cpp  slam_toolbox_lifelong.cpp  slam_toolbox_lifelong_node.cpp  slam_toolbox_localization.cpp  slam_toolbox_localization_node.cpp  slam_toolbox_multirobot.cpp  slam_toolbox_multirobot_node.cpp  slam_toolbox_node.cpp  slam_toolbox_sync.cpp  slam_toolbox_sync_node.cpp  spa_solver.cpp  spa_solver.h
srvs/: ClearQueue.srv  DeserializePoseGraph.srv  LoopClosure.srv  (+3 more)
(+58 files in other folders)
